--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vux": "^2.2.0",
     "fastclick": "^1.0.6",
-    "vuex-i18n": "^1.3.1",
-    "vuex": "^2.1.1",
+    "vue": "^2.5.2",
+    "vue-qart": "^2.1.1",
+    "vue-qr": "^1.2.8",
     "vue-router": "^3.0.1",
-    "vue": "^2.5.2"
+    "vuex": "^2.1.1",
+    "vuex-i18n": "^1.3.1",
+    "vux": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
