--- a/package.json
+++ b/package.json
@@ -14,65 +14,65 @@
   },
   "dependencies": {
     "fastclick": "^1.0.6",
-    "vue": "^2.5.2",
-    "vue-qart": "^2.1.1",
-    "vue-qr": "^1.2.8",
-    "vue-router": "^3.0.1",
+    "vue": "^2.5.21",
+    "vue-qart": "^2.2.0",
+    "vue-qr": "^1.5.2",
+    "vue-router": "^3.0.2",
     "vuex": "^2.1.1",
-    "vuex-i18n": "^1.3.1",
-    "vux": "^2.2.0"
+    "vuex-i18n": "^1.11.0",
+    "vux": "^2.9.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.1",
+    "autoprefixer": "^7.2.6",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^21.0.2",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
+    "chalk": "^2.4.2",
+    "chromedriver": "^2.27.2",
     "compression-webpack-plugin": "^0.3.2",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "cross-spawn": "^5.0.1",
+    "css-loader": "^0.28.11",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^2.30.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "babel-jest": "^21.0.2",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
-    "vue-jest": "^1.0.2",
-    "node-notifier": "^5.1.2",
-    "chromedriver": "^2.27.2",
-    "cross-spawn": "^5.0.1",
-    "nightwatch": "^0.9.12",
-    "selenium-server": "^3.0.1",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "url-loader": "^0.5.8",
-    "yaml-loader": "^0.4.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "vux-loader": "^1.0.56",
-    "vue-loader": "^13.3.0",
+    "nightwatch": "^0.9.21",
+    "node-notifier": "^5.3.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.4.0",
+    "portfinder": "^1.0.20",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.6",
+    "rimraf": "^2.6.3",
+    "selenium-server": "^3.141.59",
+    "semver": "^5.6.0",
+    "shelljs": "^0.7.6",
+    "url-loader": "^0.5.8",
+    "vue-jest": "^1.0.2",
+    "vue-loader": "^13.7.3",
+    "vue-style-loader": "^3.1.2",
+    "vue-template-compiler": "^2.5.21",
+    "vux-loader": "^1.2.9",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "portfinder": "^1.0.13",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-dev-server": "^2.11.3",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.2.1",
+    "yaml-loader": "^0.4.0"
   },
   "engines": {
     "node": ">= 4.0.0",
